deploy/dev/default_constraints.gatekeeper.sh_v1beta1_k8srequiredlabels_dev-cluster-ns-must-have-geo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: dev-cluster
  labels:
    cluster: dev-cluster
    environment: dev
  name: dev-cluster-ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
