deploy/dev/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: dev-cluster
  labels:
    environment: dev
    geo: uk
  name: tenant-a
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: dev-cluster
  labels:
    environment: dev
    geo: uk
  name: tenant-b
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  labels:
    environment: dev
  name: ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: dev-cluster
  labels:
    environment: dev
    geo: uk
  name: default-deny-ingress
  namespace: tenant-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: dev-cluster
  labels:
    environment: dev
    geo: uk
  name: default-deny-ingress
  namespace: tenant-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
